[gd_scene load_steps=2 format=3 uid="uid://cie2m0mdbf331"]

[ext_resource type="Script" uid="uid://crun6rk40ehwi" path="res://scripts/FlashcardPopup.gd" id="1_qqas6"]

[node name="FlashcardPopup" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_qqas6")

[node name="Panel" type="Panel" parent="."]
offset_left = 630.0
offset_top = 300.0
offset_right = 670.0
offset_bottom = 340.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="QuestionLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="AnswerInput" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="SubmitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Submit"
